# services/static/swagger.yaml
@@ -12,7 +12,6 @@ tags:
   - name: admin
     description: Admin-only routes
 schemes:
-  - https
   - http
 paths:
   /healthcheck:
@@ -30,7 +29,7 @@ paths:
             example: "Hello, World!"
 
   # Trails
-  /:
+  /trails:
     get:
       tags:
         - trail
@@ -66,54 +65,81 @@ paths:
                 example: "101112"
 
 
-  /user/register:
-    post:
+  # ADMIN
+  /admin/trails:
+    get:
       tags:
         - admin
-      summary: Create a new user account
-      description: ''
+      summary: Get all trails and basic information
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: All trails
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                active:
+                  type: boolean
+                  example: true
+                created_at:
+                  type: string
+                  example: "Tue, 04 Jun 2024 19:51:46 GMT"
+                distance:
+                  type: number
+                  example: 10.50
+                id:
+                  type: integer
+                  example: 3
+                n_trees:
+                  type: integer
+                  example: 2
+                name:
+                  type: string
+                  example: "Trilha Teste 0"
+                photo:
+                  type: string
+                  example: "example.com/image/123"
+
+  /admin/trail/{id}:
+    get:
+      tags:
+        - admin
+      summary: Get a specific trail
       produces:
         - application/json
       parameters:
-        - in: query
-          name: name
+        - in: path
+          name: id
           type: string
-          description: "**User's first and last name**"
-          required: true
-        - in: query
-          name: email
-          type: string
-          description: "**User's email address**"
-          required: true
-        - in: query
-          name: password
-          type: string
-          description: "**User's password**"
+          description: "Trail ID"
           required: true
       responses:
-        '400':
-          description: "**Bad parameter values. Either missing arguments, too long name, invalid email address or password criteria is not met.**"
+        '200':
+          description: Trail's information
           schema:
             type: object
             properties:
-              message:
+              active:
+                type: boolean
+                example: true
+              created_at:
                 type: string
-                example: "Invalid email address"
-
-        '409':
-          description: "**The email address is currently associated to an active account.**"
-          schema:
-            type: object
-            properties:
-              message:
+                example: "Tue, 04 Jun 2024 19:51:46 GMT"
+              distance:
+                type: number
+                example: 10.50
+              id:
+                type: integer
+                example: 3
+              n_trees:
+                type: integer
+                example: 2
+              name:
                 type: string
-                example: "User already exists."
-
-        '201':
-          description: "**Sucessfully created user account and sent OTP to the email address.**"
-          schema:
-            type: object
-            properties:
-              message:
+                example: "Trilha Teste 0"
+              photo:
                 type: string
-                example: "User created successfully. Verify email."
+                example: "example.com/image/123"
